--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "todoapp",
+  "name": "joeltiogo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "compass": "^0.1.1",
+    "font-awesome": "^4.7.0",
+    "node-sass": "^4.13.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.3.0",
+    "reactstrap": "^8.4.0",
+    "scss": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
